[gd_scene load_steps=2 format=3 uid="uid://c9e9e9e9e9e9"]

[ext_resource type="Script" path="res://scripts/BattleEngine.gd" id="1_battle"]

[node name="Battle" type="Node2D"]
script = ExtResource("1_battle")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.2, 0.22, 0.25, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TurnLabel" type="Label" parent="CanvasLayer"]
offset_left = 50.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 80.0
text = "Turn: 1"

[node name="LogLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 130.0
grow_horizontal = 2
text = "Battle Log..."
horizontal_alignment = 1

[node name="HandContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Card" type="Button" parent="CanvasLayer/HandContainer"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 2
text = "Strike
(6 Dmg)"

[connection signal="pressed" from="CanvasLayer/HandContainer/Card" to="." method="_on_attack_button_pressed"]
